# MO815-tasks

./: .gitignore  CMakeLists.txt  MIP.c  Makefile  README.md  dynamictrees.c  getslice.c  orientedwatershed.c  rendering-transparency.c  reslicing.c  surface-rendering.c  watershed.c  wireframe.c
include/: ift.h  iftDataSet.h  iftFiltering.h  iftGraphics.h  iftImage.h  iftIteratedDynamicOPF.h  iftMImage.h  iftMetrics.h  iftRepresentation.h  iftSegmentation.h  iftSimilarity.h
include/ift/core/dtypes/: Set.h
include/ift/imgproc/dtypes/: VoxelArray.h
report/: report.aux  report.fdb_latexmk  report.fls  report.tex
